# platform-docs

./: .gitignore  404.html  CNAME  README.md  env-init.sh  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
advanced/: index.html
azure-devops-ci-cd/: index.html
azure-logger-bundle/: index.html
azure-setup/: index.html
azure-setup-overview/: index.html
chaining-notebook-functions/: index.html
checking-coding-standards/: index.html
clone-demo-project/: index.html
coding-daipe-way/: index.html
create-daipe-project/: index.html
create-repo-from-template/: index.html
creating-custom-output-decorator/: index.html
creating-decorator-function/: index.html
creating-pull-request/: index.html
customizing-table-defaults/: index.html
customizing-table-names/: index.html
daipe-2-0-release-notes/: index.html
daipe-local-setup/: index.html
daipe-project-templates/: index.html
data-pipelines-project-setup/: index.html
data-pipelines-workflow/: index.html
databricks-connect-setup/: index.html
datafactory-parametrization/: index.html
datalake-resources-setup/: index.html
datalake-storage-path/: index.html
datalake-structure/: index.html
decorator-functions/: index.html
deploy-demo-project/: index.html
devops-agents-setup/: index.html
docs/: 01_basics_of_do_datasciencing.ipynb  02_advanced_do_datasciencing.ipynb  03_custom_training_pipelines.ipynb  04_custom_mlmodels_hyperparameter_spaces.ipynb  404.md  advanced.md  azure-devops-ci-cd.md  azure-logger-bundle.md  azure-setup-overview.md  (+58 more)
(+139 files in other folders)
