[tool.poetry]
name = "ai-platform-docs"
version = "0.1.0"
description = ""
authors = ["TechScale Team <info@datasentics.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1"
mkdocs-material = "^7.1"
mkdocs-redirects = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
